--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -18,4 +18,8 @@ body::selection {
   background: $of-pink;
 }
 
+*:focus {
+  outline: 1px solid $dark-pink;
+}
+
 /* utility classes */
